--- a/app-agenda/package.json
+++ b/app-agenda/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "node server.js",
     "postinstall": "ng build --aot --prod",
+    "heroku-postbuild": "npm run build",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
