--- a/app-agenda/package.json
+++ b/app-agenda/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "postinstall": "ng build --aot --prod",
+    "postinstall": "ng build --aot",
     "heroku-postbuild": "npm run build",
     "build": "ng build --prod",
     "test": "ng test",
