--- a/app-agenda/angular.json
+++ b/app-agenda/angular.json
@@ -24,9 +24,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
+              "./src/styles.css",
+              "./node_modules/materialize-css/dist/css/materialize.css"
+                    ],
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.js",
+              "./node_modules/materialize-css/dist/js/materialize.js"
+            ]
           },
           "configurations": {
             "production": {
