--- a/app-agenda/package.json
+++ b/app-agenda/package.json
@@ -26,9 +26,10 @@
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
     "angular-cli-ghpages": "^0.6.2",
+    "angular2-materialize": "^15.1.10",
     "bootstrap": "^4.1.3",
-    "express": "^4.17.1",
     "jquery": "^3.3.1",
+    "materialize-css": "^1.0.0-rc.2",
     "node": "^7.10.1",
     "popper.js": "^1.14.3",
     "rxjs": "~6.4.0",
